--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "proxy": "http://test.api.boxigo.in",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
